--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -8,6 +8,10 @@
     "build": "rss-scripts build"
   },
   "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "prettier": "2.4.1",
     "rss-scripts": "^0.2.4"
   }
 }
