--- a/migration-newip-to-ts/package.json
+++ b/migration-newip-to-ts/package.json
@@ -1,35 +1,29 @@
 {
-    "name": "NewsJS",
-    "version": "1.0.0",
-    "description": "",
-    "main": "webpack.base.config.js",
-    "scripts": {
-        "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-        "build": "webpack --config ./webpack.config.js --env mode=prod",
-        "lint": "eslint . --ext .ts"
-    },
-    "repository": {
-        "type": "git",
-        "url": ""
-    },
-    "keywords": [],
-    "author": "Aleh Serhiyenia",
-    "license": "ISC",
-    "homepage": "",
-    "devDependencies": {
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^5.1.0",
-        "eslint": "^7.27.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.3",
-        "eslint-plugin-prettier": "^3.4.0",
-        "html-webpack-plugin": "^5.2.0",
-        "prettier": "2.2.1",
-        "style-loader": "^2.0.0",
-        "webpack": "^5.37.1",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.7.3"
-    }
+  "version": "0.1.0",
+  "description": "My new js application",
+  "private": true,
+  "name": "migration-newip-to-ts",
+  "scripts": {
+    "start": "webpack serve --env development",
+    "build": "webpack",
+    "lint": "eslint . --ext .ts"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.7",
+    "eslint": "^8.3.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^1.6.2",
+    "sass": "^1.42.1",
+    "sass-loader": "^11.1.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.2",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-remove-empty-scripts": "^0.7.1"
+  }
 }
