--- a/migration-newip-to-ts/package.json
+++ b/migration-newip-to-ts/package.json
@@ -15,6 +15,7 @@
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.7",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.2",
     "sass": "^1.42.1",
