--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -2,14 +2,16 @@
   "version": "0.1.0",
   "description": "My new js application",
   "private": true,
-  "name": "christmas-task",
+  "name": "my-app",
   "scripts": {
     "start": "webpack serve --env development",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint ./src",
+    "format": "prettier ./src --write"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.7",
@@ -29,8 +31,5 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-remove-empty-scripts": "^0.7.1"
-  },
-  "dependencies": {
-    "normalize.css": "^8.0.1"
   }
 }
