--- a/christmas-task/tsconfig.json
+++ b/christmas-task/tsconfig.json
@@ -14,7 +14,8 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "strictNullChecks": false
   },
   "exclude": ["node_modules", "/"],
   "include": ["src/**/*", "modules.d.ts"]
