--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -31,5 +31,8 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-remove-empty-scripts": "^0.7.1"
+  },
+  "dependencies": {
+    "nouislider": "^15.5.0"
   }
 }
