--- a/async-race/.eslintrc.json
+++ b/async-race/.eslintrc.json
@@ -4,7 +4,9 @@
         "es2021": true
     },
     "extends": [
-        "airbnb-base", 
+    "plugin:@typescript-eslint/eslint-recommended", 
+    "plugin:@typescript-eslint/recommended", 
+    "plugin:prettier/recommended", 
     "prettier" 
     ],
     "parser": "@typescript-eslint/parser",
