--- a/migration-newip-to-ts/.eslintrc.json
+++ b/migration-newip-to-ts/.eslintrc.json
@@ -1,15 +1,17 @@
-{
-  "root": true,
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
-  "rules": {
-    "@typescript-eslint/no-explicit-any": "error"
-  }
-}
+{ 
+  "env": { 
+    "browser": true, 
+    "es2021": true 
+  }, 
+  "extends": [ 
+    "plugin:@typescript-eslint/eslint-recommended", 
+    "plugin:@typescript-eslint/recommended", 
+    "plugin:prettier/recommended", 
+    "prettier" 
+  ], 
+  "parser": "@typescript-eslint/parser", 
+  "plugins": ["prettier", "@typescript-eslint"], 
+  "rules": { 
+    "@typescript-eslint/no-explicit-any": "error" 
+  } 
+} 
